# opengl-shadows-3GC3

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
CMakeIncludes/: CompilerOptions.cmake  Depend.cmake  Directories.cmake  Project.cmake  VSFolders.cmake
CMakeModules/: FindGLEW.cmake  FindGLUT.cmake  FindSOIL.cmake
src/: glcraft.cpp  glescraft.cpp
src/minecode/: glescraft
